forester spring comparison ++ change from ‘pdf archive’ to just archive. More general name makes sense now that not all archives are pdfs but images also.

--- a/detail-page/3rd-gen-rallitek-vs-ironman-springs.html
+++ b/detail-page/3rd-gen-rallitek-vs-ironman-springs.html
@@ -25,10 +25,10 @@
   <meta name="description" content="Curated Offroad Subaru Build Guides.">
   <meta name="Keywords" content="lifted subaru offroad fabrication 4x4">
   <!--  Facebook -->
-  <meta property="og:title" content="  Maximum Tire Size on 15 inch Rims &amp; 2inch Lift " />
-  <meta property="og:description" content="  short answer: 28&quot;, 205/75r15 " />
+  <meta property="og:title" content="  3rd Gen: RalliTek vs Ironman Springs " />
+  <meta property="og:description" content="  2009 Forester " />
   <meta name="google-site-verification" content="cAoAzBKndIH-Pn4IS2m2kYgLKt-jQEGGcPpMaHA6sjw" />
-    <meta property="og:image" content="/static/img/guides/gl-placeholder.jpg" />
+    <meta property="og:image" content="/static/img/guides/springcomparison.jpg" />
 
 
 </head>
@@ -57,18 +57,25 @@
 
 
     <section class="details">
-        <h1 class="details-headline">Maximum Tire Size on 15 inch Rims &amp; 2inch Lift</h1>
-         <p class="details-author">by   <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-          Loyale 2.7 Turbo
-          </a>
+        <h1 class="details-headline">3rd Gen: RalliTek vs Ironman Springs</h1>
+         <p class="details-author">by   
+          Aaron Reddecliffe
+          
 
           </p>
-          <a href="https://www.ultimatesubaru.org/forum/topic/123194-maximum-tire-size-on-15-rims-2-lift/" class="btn grey-background">Link</a>
-          <a href="/static/archive/GLMaximumTiresize2InchLift-UltimateSubaruMessageBoard.pdf" class="btn grey-background">Archive</a>
+          <a href="https://www.facebook.com/groups/464988110341808" class="btn grey-background">Link</a>
+          <a href="/static/img/guides/springComparisonPost.png" class="btn grey-background">Archive</a>
 
         <div class="details-content">
-            <img  src="/static/img/guides/gl-placeholder.jpg">
-            <p>USMB Thread on maximum rubber with a 2" lift.</p>
+            <img  src="/static/img/guides/springcomparison.jpg">
+            <p>This is from a post on a closed group, PNW Subaru Offroad on Facebook./p>
+            <p>The author's findings were on an 2009 SH forester with 235/75r15 and about 300lbs of extra weight from offroad accessories.</p>
+            <hr>
+            <a href="../static/img/guides/springComparisonPost.png"><img src="../static/img/guides/springComparisonPost.png" alt="Replaced my springs (again). I swapped out my RalliTek overload springs with Ironman lift springs. Let the comparison begin! I get a 1/4" more lift than the RalliTeks. Riding significantly higher than the standard Kings that I had previously. It'll probably settle after time. Both the RalliTek and the Ironman springs ride better than the Kings. I'm noticing a stiffer ride with the Ironman springs than with the RalliTeks. I took pictures of the RalliTeks and the Ironmans. It's been a while since I ran the Kings so I didn't get a picture of them installed. I am running 235/75r15 with about 300lbs of extra weight (custom rear bumper/ARB fridge/2 20L jerrycans/fullsize spare tire)."/>
+            <div class="side-by-side"></a>
+            <a href="../static/img/guides/ironman.jpg"><img src="../static/img/guides/ironman.jpg" alt="ironman spring with measurment"/></a>
+            <a href="../static/img/guides/ralliTek.jpg"> <img src="../static/img/guides/ralliTek.jpg" alt="ralliTek spring with measurment"/></a>
+            </div>
         </div>
     </section>
 
