--- a/index.html
+++ b/index.html
@@ -73,43 +73,17 @@
           <select class="control-field filter-field form-control">
             <!--TODO this needs to be created by handlebars-->
             <option value="" selected>All Types</option>
-              <option value="CROSSTREK">CROSSTREK</option>
-              <option value="L-SERIES">L-SERIES</option>
               <option value="GENERIC INFO">GENERIC INFO</option>
-              <option value="EJ22">EJ22</option>
+              <option value="CROSSTREK">CROSSTREK</option>
               <option value="FORESTER">FORESTER</option>
+              <option value="L-SERIES">L-SERIES</option>
+              <option value="EJ22">EJ22</option>
           </select>
         </div>
       </div>
       </div>
       <div class="grid">
         <!-- Tiles! -->
-
-          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
-
-              <div class="card">
-                <!--<div class="card-id">Crosstrek</div> -->
-                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
-                <div class="card-title">Bumper Cutting</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/gl-placeholder.jpg');" class="item h2 w4" data-category="L-series" data-description="short answer: 28&quot;, 205/75r15" data-title="Maximum Tire Size on 15 inch Rims &amp; 2inch Lift">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/maximum-tire-size-on-15-inch-rims-2inch-lift.html"> <div class="item-content">
-                <div class="card-title">Maximum Tire Size on 15 inch Rims &amp; 2inch Lift</div>
-                <div class="card-description">short answer: 28&quot;, 205/75r15</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
 
           <div style="background-image: url('/static/img/guides/cvgrease.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="Advice for Longer CV Joints Life">
 
@@ -124,13 +98,39 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
+          <div style="background-image: url('/static/img/guides/overbiteProject.jpg');" class="item h2 w4" data-category="Crosstrek" data-description="" data-title="Bumper Cutting">
+
+              <div class="card">
+                <!--<div class="card-id">Crosstrek</div> -->
+                <a href="./detail-page/bumper-cutting.html"> <div class="item-content">
+                <div class="card-title">Bumper Cutting</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/springcomparison.jpg');" class="item h2 w4" data-category="FORESTER" data-description="2009 Forester" data-title="3rd Gen: RalliTek vs Ironman Springs">
+
+              <div class="card">
+                <!--<div class="card-id">FORESTER</div> -->
+                <a href="./detail-page/3rd-gen-rallitek-vs-ironman-springs.html"> <div class="item-content">
+                <div class="card-title">3rd Gen: RalliTek vs Ironman Springs</div>
+                <div class="card-description">2009 Forester</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/gl-placeholder.jpg');" class="item h2 w4" data-category="L-series" data-description="short answer: 28&quot;, 205/75r15" data-title="Maximum Tire Size on 15 inch Rims &amp; 2inch Lift">
 
               <div class="card">
                 <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
-                <div class="card-title">Haynes Weber Carburator Manual</div>
-                <div class="card-description"></div>
+                <a href="./detail-page/maximum-tire-size-on-15-inch-rims-2inch-lift.html"> <div class="item-content">
+                <div class="card-title">Maximum Tire Size on 15 inch Rims &amp; 2inch Lift</div>
+                <div class="card-description">short answer: 28&quot;, 205/75r15</div>
                 </a>
                 </div>
               </div>
@@ -176,6 +176,19 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
+                <div class="card-title">Haynes Weber Carburator Manual</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/subaru-history.jpg');" class="item h2 w4" data-category="Generic Info" data-description="Subaru research and information website" data-title="Cars101.com">
 
               <div class="card">
@@ -196,6 +209,19 @@
                 <a href="./detail-page/video-how-to-tune-a-cb-antennae.html"> <div class="item-content">
                 <div class="card-title">VIDEO: How-To Tune a CB Antennae</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/classic-ford-weber-dgv-rebuild-instructions-min.png');" class="item h2 w4" data-category="L-series" data-description="Overhauling a 32/36 DGAV is the perfect way to get all the benefits of a brand-new unit at a fraction of the cost. " data-title="Rebuild Your Weber DGAV Carb">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/rebuild-your-weber-dgav-carb.html"> <div class="item-content">
+                <div class="card-title">Rebuild Your Weber DGAV Carb</div>
+                <div class="card-description">Overhauling a 32/36 DGAV is the perfect way to get all the benefits of a brand-new unit at a fraction of the cost. </div>
                 </a>
                 </div>
               </div>
@@ -228,19 +254,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/classic-ford-weber-dgv-rebuild-instructions-min.png');" class="item h2 w4" data-category="L-series" data-description="Overhauling a 32/36 DGAV is the perfect way to get all the benefits of a brand-new unit at a fraction of the cost. " data-title="Rebuild Your Weber DGAV Carb">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/rebuild-your-weber-dgav-carb.html"> <div class="item-content">
-                <div class="card-title">Rebuild Your Weber DGAV Carb</div>
-                <div class="card-description">Overhauling a 32/36 DGAV is the perfect way to get all the benefits of a brand-new unit at a fraction of the cost. </div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/swapguide-min.png');" class="item h2 w4" data-category="L-series" data-description="numbchux swap guide" data-title="EA82 to Ej22 Swap Guide">
 
               <div class="card">
@@ -267,38 +280,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
-                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/DonorCar.jpg');" class="item h2 w4" data-category="L-series" data-description="" data-title="Rear e-Brake Retrofit ">
 
               <div class="card">
                 <!--<div class="card-id">L-series</div> -->
                 <a href="./detail-page/rear-e-brake-retrofit.html"> <div class="item-content">
                 <div class="card-title">Rear e-Brake Retrofit </div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
-
-              <div class="card">
-                <!--<div class="card-id">ej22</div> -->
-                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
-                <div class="card-title">End Wrench: EJ22 Overhaul</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -313,6 +300,32 @@
                 <a href="./detail-page/fitting-an-ej22-radiator-in-an-l-series.html"> <div class="item-content">
                 <div class="card-title">Fitting an EJ22 Radiator in an L-series</div>
                 <div class="card-description">EJ22 Swap</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/improved-shock-absorbers-and-spring-coils-on-loyales.html"> <div class="item-content">
+                <div class="card-title">Improved Shock Absorbers and Spring Coils On Loyales</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/soob22overhaul-min.png');" class="item h2 w4" data-category="ej22" data-description="" data-title="End Wrench: EJ22 Overhaul">
+
+              <div class="card">
+                <!--<div class="card-id">ej22</div> -->
+                <a href="./detail-page/end-wrench-ej22-overhaul.html"> <div class="item-content">
+                <div class="card-title">End Wrench: EJ22 Overhaul</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -384,19 +397,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Hitachi Carb Rebuild">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
-                <div class="card-title">Hitachi Carb Rebuild</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/hitachiGuide.png');" class="item h2 w4" data-category="L-series" data-description="Carburetor Theory, Operation &amp; Servicing" data-title="Hitachi Training Manual, 1979">
 
               <div class="card">
@@ -404,6 +404,19 @@
                 <a href="./detail-page/hitachi-training-manual-1979.html"> <div class="item-content">
                 <div class="card-title">Hitachi Training Manual, 1979</div>
                 <div class="card-description">Carburetor Theory, Operation &amp; Servicing</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Hitachi Carb Rebuild">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
+                <div class="card-title">Hitachi Carb Rebuild</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -423,19 +436,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/L-seriesWorkshopManual.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="L-series Workshop Manual">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/l-series-workshop-manual.html"> <div class="item-content">
-                <div class="card-title">L-series Workshop Manual</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/howtokeepyoursubaruAlive.png');" class="item h2 w4" data-category="L-series" data-description="This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!" data-title="How To Keep Your Subaru Alive">
 
               <div class="card">
@@ -443,6 +443,19 @@
                 <a href="./detail-page/how-to-keep-your-subaru-alive.html"> <div class="item-content">
                 <div class="card-title">How To Keep Your Subaru Alive</div>
                 <div class="card-description">This went out of print a long time ago. Luckily for us Joel Grice digitized it for us!</div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/L-seriesWorkshopManual.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="L-series Workshop Manual">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/l-series-workshop-manual.html"> <div class="item-content">
+                <div class="card-title">L-series Workshop Manual</div>
+                <div class="card-description"></div>
                 </a>
                 </div>
               </div>
@@ -475,12 +488,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
+          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
-                <div class="card-title">1985-96 Engine Torque Specs</div>
+                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
+                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -488,12 +501,12 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/fenderRolling.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="DIY Fender Cutting &amp; Rolling">
+          <div style="background-image: url('/static/img/guides/torque.jpg');" class="item h2 w4" data-category="Generic Info" data-description="" data-title="1985-96 Engine Torque Specs">
 
               <div class="card">
                 <!--<div class="card-id">Generic Info</div> -->
-                <a href="./detail-page/diy-fender-cutting-rolling.html"> <div class="item-content">
-                <div class="card-title">DIY Fender Cutting &amp; Rolling</div>
+                <a href="./detail-page/1985-96-engine-torque-specs.html"> <div class="item-content">
+                <div class="card-title">1985-96 Engine Torque Specs</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -541,7 +554,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.24.18-20.56</p>
+      <p >v1-09.25.18-27.06</p>
     </a>
   </footer>
 
