--- a/detail-page/3rd-gen-rallitek-vs-ironman-springs.html
+++ b/detail-page/3rd-gen-rallitek-vs-ironman-springs.html
@@ -68,7 +68,7 @@
 
         <div class="details-content">
             <img  src="/static/img/guides/springcomparison.jpg">
-            <p>This is from a post on a closed group, PNW Subaru Offroad on Facebook./p>
+            <p>This is from a post on a closed group, PNW Subaru Offroad on Facebook.</p>
             <p>The author's findings were on an 2009 SH forester with 235/75r15 and about 300lbs of extra weight from offroad accessories.</p>
             <hr>
             <a href="../static/img/guides/springComparisonPost.png"><img src="../static/img/guides/springComparisonPost.png" alt="Replaced my springs (again). I swapped out my RalliTek overload springs with Ironman lift springs. Let the comparison begin! I get a 1/4" more lift than the RalliTeks. Riding significantly higher than the standard Kings that I had previously. It'll probably settle after time. Both the RalliTek and the Ironman springs ride better than the Kings. I'm noticing a stiffer ride with the Ironman springs than with the RalliTeks. I took pictures of the RalliTeks and the Ironmans. It's been a while since I ran the Kings so I didn't get a picture of them installed. I am running 235/75r15 with about 300lbs of extra weight (custom rear bumper/ARB fridge/2 20L jerrycans/fullsize spare tire)."/>
@@ -88,7 +88,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-09.25.18-31.30</p>
     </a>
   </footer>
 
