--- a/index.html
+++ b/index.html
@@ -150,6 +150,19 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
+                <div class="card-title">Haynes Weber Carburator Manual</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/bendingtube.jpg');" class="item h2 w4" data-category="Generic Info" data-description="pirate4x4 tech" data-title="Tube Bending 101">
 
               <div class="card">
@@ -169,19 +182,6 @@
                 <!--<div class="card-id">Generic Info</div> -->
                 <a href="./detail-page/diy-swing-away-bumper.html"> <div class="item-content">
                 <div class="card-title">DIY: Swing Away Bumper</div>
-                <div class="card-description"></div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
-          <div style="background-image: url('/static/img/guides/WeberCarburatorManual-min.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Haynes Weber Carburator Manual">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/haynes-weber-carburator-manual.html"> <div class="item-content">
-                <div class="card-title">Haynes Weber Carburator Manual</div>
                 <div class="card-description"></div>
                 </a>
                 </div>
@@ -306,6 +306,19 @@
 
           </div>
 
+          <div style="background-image: url('/static/img/guides/shitbox.jpg');" class="item h2 w4" data-category="L-series" data-description="" data-title="Radius Rod Extension">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/radius-rod-extension.html"> <div class="item-content">
+                <div class="card-title">Radius Rod Extension</div>
+                <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
           <div style="background-image: url('/static/img/guides/ea82suspension.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Improved Shock Absorbers and Spring Coils On Loyales">
 
               <div class="card">
@@ -397,19 +410,6 @@
 
           </div>
 
-          <div style="background-image: url('/static/img/guides/hitachiGuide.png');" class="item h2 w4" data-category="L-series" data-description="Carburetor Theory, Operation &amp; Servicing" data-title="Hitachi Training Manual, 1979">
-
-              <div class="card">
-                <!--<div class="card-id">L-series</div> -->
-                <a href="./detail-page/hitachi-training-manual-1979.html"> <div class="item-content">
-                <div class="card-title">Hitachi Training Manual, 1979</div>
-                <div class="card-description">Carburetor Theory, Operation &amp; Servicing</div>
-                </a>
-                </div>
-              </div>
-
-          </div>
-
           <div style="background-image: url('/static/img/guides/hitachi-rebuild.png');" class="item h2 w4" data-category="L-series" data-description="" data-title="Hitachi Carb Rebuild">
 
               <div class="card">
@@ -417,6 +417,19 @@
                 <a href="./detail-page/hitachi-carb-rebuild.html"> <div class="item-content">
                 <div class="card-title">Hitachi Carb Rebuild</div>
                 <div class="card-description"></div>
+                </a>
+                </div>
+              </div>
+
+          </div>
+
+          <div style="background-image: url('/static/img/guides/hitachiGuide.png');" class="item h2 w4" data-category="L-series" data-description="Carburetor Theory, Operation &amp; Servicing" data-title="Hitachi Training Manual, 1979">
+
+              <div class="card">
+                <!--<div class="card-id">L-series</div> -->
+                <a href="./detail-page/hitachi-training-manual-1979.html"> <div class="item-content">
+                <div class="card-title">Hitachi Training Manual, 1979</div>
+                <div class="card-description">Carburetor Theory, Operation &amp; Servicing</div>
                 </a>
                 </div>
               </div>
@@ -554,7 +567,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
