--- a/list.html
+++ b/list.html
@@ -112,6 +112,16 @@
         <td>  <a href="/static/archive/techbillavistaRecovery.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>Haynes Weber Carburator Manual</td>
+        <td>
+            <a href="https://www.facebook.com/groups/55757792531">
+        Old School Subaru Group
+            </a>
+      </td>
+        <td> <a href="https://www.facebook.com/groups/55757792531/files/" class="btn grey-background">Link</a>  </td>
+        <td>  <a href="/static/archive/WeberCarburatorManual.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>Tube Bending 101</td>
         <td>
         Rob Park
@@ -128,16 +138,6 @@
       </td>
         <td> <a href="https://americanadventurist.com/forum/threads/subaru-forester-rear-front-bumper-build-pics.3788/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/archive/subaru-forester-rear-front-bumper-build.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
-        <td>Haynes Weber Carburator Manual</td>
-        <td>
-            <a href="https://www.facebook.com/groups/55757792531">
-        Old School Subaru Group
-            </a>
-      </td>
-        <td> <a href="https://www.facebook.com/groups/55757792531/files/" class="btn grey-background">Link</a>  </td>
-        <td>  <a href="/static/archive/WeberCarburatorManual.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Cars101.com</td>
@@ -222,6 +222,16 @@
         <td>  </td>
       </tr>
       <tr>
+        <td>Radius Rod Extension</td>
+        <td>
+            <a href="https://www.instagram.com/buimfg/">
+        Alex Bui
+            </a>
+      </td>
+        <td>  </td>
+        <td>  </td>
+      </tr>
+      <tr>
         <td>Improved Shock Absorbers and Spring Coils On Loyales</td>
         <td>
             <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
@@ -286,6 +296,14 @@
         <td>  <a href="/static/archive/Mechanical-Conversion-on-Hitachi-Carburetors.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
+        <td>Hitachi Carb Rebuild</td>
+        <td>
+        
+      </td>
+        <td>  </td>
+        <td>  <a href="/static/archive/Hitachicarburetor.pdf" class="btn grey-background">PDF</a>  </td>
+      </tr>
+      <tr>
         <td>Hitachi Training Manual, 1979</td>
         <td>
             <a href="https://www.facebook.com/groups/55757792531">
@@ -294,14 +312,6 @@
       </td>
         <td> <a href="https://www.facebook.com/groups/55757792531/files/" class="btn grey-background">Link</a>  </td>
         <td>  <a href="/static/archive/HitachiTrainingmanual.pdf" class="btn grey-background">PDF</a>  </td>
-      </tr>
-      <tr>
-        <td>Hitachi Carb Rebuild</td>
-        <td>
-        
-      </td>
-        <td>  </td>
-        <td>  <a href="/static/archive/Hitachicarburetor.pdf" class="btn grey-background">PDF</a>  </td>
       </tr>
       <tr>
         <td>Ignition Module Testing</td>
@@ -395,7 +405,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
