--- a/detail-page/1985-96-engine-torque-specs.html
+++ b/detail-page/1985-96-engine-torque-specs.html
@@ -58,13 +58,15 @@
 
     <section class="details">
         <h1 class="details-headline">1985-96 Engine Torque Specs</h1>
-         <p class="details-author">by   
-          Brian Bradburn
-          
+        <h3 class="details-category"> — Generic Info</h3>
+        <div class="details-buttons">
+           <p class="details-author">by   
+            Brian Bradburn
+            
 
-          </p>
-          <a href="http://torquespecs.tripod.com/su85-96.htm" class="btn grey-background">Link</a>
-
+            </p>
+            <a href="http://torquespecs.tripod.com/su85-96.htm" class="btn grey-background">Link</a>
+        </div>
         <div class="details-content">
             <img  src="/static/img/guides/torque.jpg">
             <p> The original source for this (http://torquespecs.tripod.com/su85-96.htm), as of 8/2018 is akin to malware. The ads bring me back to the early 2000s in all of the worst ways, just use the PDFs I made and save yourself the aggravation. Some images were missing when I archived the pages.</p>
@@ -92,7 +94,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
