--- a/detail-page/diy-fender-cutting-rolling.html
+++ b/detail-page/diy-fender-cutting-rolling.html
@@ -58,10 +58,12 @@
 
     <section class="details">
         <h1 class="details-headline">DIY Fender Cutting &amp; Rolling</h1>
-        
-          <a href="https://www.pirate4x4.com/forum/ford/824933-tips-fender-cutting.html" class="btn grey-background">Link</a>
-          <a href="/static/archive/tips-fender-cutting.pdf" class="btn grey-background">Archive</a>
-
+        <h3 class="details-category"> — Generic Info</h3>
+        <div class="details-buttons">
+          
+            <a href="https://www.pirate4x4.com/forum/ford/824933-tips-fender-cutting.html" class="btn grey-background">Link</a>
+            <a href="/static/archive/tips-fender-cutting.pdf" class="btn grey-background">Archive</a>
+        </div>
         <div class="details-content">
             <img  src="/static/img/guides/fenderRolling.jpg">
             <p>This was a great source of inspiration for my own project when I cut and rolled my fenders.</p><p> You need a welder, tin snips, flap sander, a pair of pliers and an hour or two each wheel well to make a uniform lip that looks nearly factory.</p>
@@ -77,7 +79,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
