--- a/detail-page/diy-head-porting.html
+++ b/detail-page/diy-head-porting.html
@@ -58,13 +58,15 @@
 
     <section class="details">
         <h1 class="details-headline">DIY Head Porting</h1>
-         <p class="details-author">by   
-          Tech Staff
-          
+        <h3 class="details-category"> — Generic Info</h3>
+        <div class="details-buttons">
+           <p class="details-author">by   
+            Tech Staff
+            
 
-          </p>
-          <a href="/static/archive/Head-Porting-DIY.pdf" class="btn grey-background">Archive</a>
-
+            </p>
+            <a href="/static/archive/Head-Porting-DIY.pdf" class="btn grey-background">Archive</a>
+        </div>
         <div class="details-content">
             <img  src="/static/img/guides/porting-min.png">
             <p>''In many cases, the greatest performance gain per dollarspent comes upon application of basic porting procedures to a production cylinder head. These basics can be done by any do-it-yourselfer even those with no porting experience''</p><p>This isn't a definitive guide. but should get you started on your research and at least help you decide if this project is one you want to tackle</p>
@@ -80,7 +82,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
