--- a/detail-page/diy-welded-differential.html
+++ b/detail-page/diy-welded-differential.html
@@ -58,9 +58,11 @@
 
     <section class="details">
         <h1 class="details-headline">DIY: Welded Differential</h1>
-        
-          <a href="http://www.fourwheeler.com/how-to/transmission-drivetrain/154-1106-jeep-differential-welding-101/photo-01.html" class="btn grey-background">Link</a>
-
+        <h3 class="details-category"> — Generic Info</h3>
+        <div class="details-buttons">
+          
+            <a href="http://www.fourwheeler.com/how-to/transmission-drivetrain/154-1106-jeep-differential-welding-101/photo-01.html" class="btn grey-background">Link</a>
+        </div>
         <div class="details-content">
             <img  src="/static/img/guides/diffwelding.gif">
             <p>Get some beer, your favorite stick welder, some 6011 rod and hillbilly yourself a locked rear end.</p><p>Sure, we could argue about the practicality of a welded rear-end and how it affects the driving characteristics on the road, but who has the time? Those CVs won't bust themselves.</p>
@@ -76,7 +78,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
