--- a/detail-page/ea82-to-ej22-swap-guide.html
+++ b/detail-page/ea82-to-ej22-swap-guide.html
@@ -58,13 +58,15 @@
 
     <section class="details">
         <h1 class="details-headline">EA82 to Ej22 Swap Guide</h1>
-         <p class="details-author">by   <a href="https://www.ultimatesubaru.org/forum/profile/1988-numbchux/">
-          numbchux
-          </a>
+        <h3 class="details-category"> — L-series</h3>
+        <div class="details-buttons">
+           <p class="details-author">by   <a href="https://www.ultimatesubaru.org/forum/profile/1988-numbchux/">
+            numbchux
+            </a>
 
-          </p>
-          <a href="/static/archive/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">Archive</a>
-
+            </p>
+            <a href="/static/archive/numbchux-EA82toEj22Swap.pdf" class="btn grey-background">Archive</a>
+        </div>
         <div class="details-content">
             <img  src="/static/img/guides/swapguide-min.png">
             <p>This is the premier guide for the ea-ej swap.</p><p>That being said, I don't love it. It is primarily geared towards an EA81-EJ22 Swap, and his wiring section leaves a lot to be desired.</p><p>I will be producing an appendix to this PDF to fill in some of the blanks.</p>
@@ -80,7 +82,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
