--- a/detail-page/fitting-an-ej22-radiator-in-an-l-series.html
+++ b/detail-page/fitting-an-ej22-radiator-in-an-l-series.html
@@ -58,12 +58,14 @@
 
     <section class="details">
         <h1 class="details-headline">Fitting an EJ22 Radiator in an L-series</h1>
-         <p class="details-author">by   <a href="https://www.instagram.com/dwesleybrown">
-          Doug Brown
-          </a>
+        <h3 class="details-category"> — L-series</h3>
+        <div class="details-buttons">
+           <p class="details-author">by   <a href="https://www.instagram.com/dwesleybrown">
+            Doug Brown
+            </a>
 
-          </p>
-
+            </p>
+        </div>
         <div class="details-content">
             <img  src="/static/img/guides/ej22radiator/9eaToEjRadiator-min.jpg">
             <p>In the fall of 2017 I swapped my tired ea82 for a 160k mile ej22. The swap went well and everything ran reliably until I blew the headgaskets a few months later. I should have changed the headgaskets before swapping, but I like to learn the hard way.</p>
@@ -100,7 +102,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
