--- a/detail-page/ignition-module-testing.html
+++ b/detail-page/ignition-module-testing.html
@@ -58,14 +58,16 @@
 
     <section class="details">
         <h1 class="details-headline">Ignition Module Testing</h1>
-         <p class="details-author">by   <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
-          Loyale 2.7 Turbo
-          </a>
+        <h3 class="details-category"> — L-series</h3>
+        <div class="details-buttons">
+           <p class="details-author">by   <a href="https://www.ultimatesubaru.org/forum/profile/13502-loyale-27-turbo">
+            Loyale 2.7 Turbo
+            </a>
 
-          </p>
-          <a href="https://www.ultimatesubaru.org/forum/topic/129601-how-to-easily-test-an-ignition-module/" class="btn grey-background">Link</a>
-          <a href="/static/archive/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">Archive</a>
-
+            </p>
+            <a href="https://www.ultimatesubaru.org/forum/topic/129601-how-to-easily-test-an-ignition-module/" class="btn grey-background">Link</a>
+            <a href="/static/archive/how-to-easily-test-an-ignition-module.pdf" class="btn grey-background">Archive</a>
+        </div>
         <div class="details-content">
             <img  src="/static/img/guides/IgnitionModuleTest.jpg">
             <p>The Ignition Module is the Electronic Part that Substituted the Points inside the Distribuitor; it usually consist in two parts: One Pick up the Signal and the other sends the Pulses to the Ignition Coil.<p><p>This Test was Done with the Nippon Denso Distribuitor, from a Carburated EA82 Subaru Engine, from the 2WD version; but this test is pretty Standard.</p>
@@ -81,7 +83,7 @@
       <p><b><i style="color: #9a9a9d;">DISCLAIMER:</i></b> LiftedSubaru.com has not verified the accuracy of the information contained here. The information contained on liftedsubarus.com represents the views and opinions of the original creators of such content and does not necessarily represent the views or opinions of LiftedSubarus.com (LiftedSubarus). The mere appearance of Content on the Site does not constitute an endorsement by LiftedSubarus or its affiliates of such Content.The Content has been made available for informational and educational purposes only. LiftedSubarus does not make any representation or warranties with respect to the accuracy, applicability, fitness, or completeness of the Content. The Content is not intended to be a substitute for professional advice, diagnosis, or treatment. LiftedSubarus hereby disclaims any and all liability to any party for any direct, indirect, implied, punitive, special, incidental or other consequential damages arising directly or indirectly from any use of the content, which is provided as is, and without warranties.
     </div>
     <a class="github" href="https://github.com/liftedsubaru/liftedsubarusite">
-      <p >v1-09.25.18-27.06</p>
+      <p >v1-10.14.18-52.34</p>
     </a>
   </footer>
 
