--- a/detail-page/cooler-thermoswitch.html
+++ b/detail-page/cooler-thermoswitch.html
@@ -70,7 +70,7 @@
         </div>
         <div class="details-content">
             <img  src="/static/img/guides/thermoswitch.jpg">
-            <p>Get your electric fan to switch on at a lower temp, with a Hyundai thermoswitch. Part # 25360-24000 (Loyale 2.7 Turbo provides a list of other part numbers that will work)</p>
+            <p>Get your electric fan to switch on at a lower temp, with a Hyundai thermoswitch. Hyundai #25360-24000, 90-96 Elantra (Loyale 2.7 Turbo provides a list of other part numbers that will work)</p>
         </div>
     </section>
 
